fixing overflow content in about section

--- a/css/base.css
+++ b/css/base.css
@@ -33,7 +33,6 @@ html {
 
 body {
   background: var(--background-light);
-  overflow-x: hidden;
 }
 
 header {
